--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": ".",
   "main": "index.js",
   "scripts": {
+    "start": "index.js",
+    "nodemon": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/FernandoPrzGmz/UnicaribeLabs-Backendv2/issues"
   },
-  "homepage": "https://github.com/FernandoPrzGmz/UnicaribeLabs-Backendv2#readme"
+  "homepage": "https://github.com/FernandoPrzGmz/UnicaribeLabs-Backendv2#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
+    "mysql2": "^1.6.4",
+    "sequelize": "^4.41.2"
+  }
 }
