--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.22.2",
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.2"
   }
